// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Success Page Component Matches the FailedPayment snapshot 1`] = `
<main>
  <header>
    <nav
      className="navbar navbar-expand-lg navbar-dark"
    >
      <div
        className="container-fluid navbar-brand pointer"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <img
          alt="B.C. Government Logo"
          className="img-fluid d-none d-md-block"
          height="44"
          src="/criminalrecordcheck/images/bcid-logo-rev-en.svg"
          width="181"
        />
        <img
          alt="B.C. Government Logo"
          className="img-fluid d-md-none"
          height="44"
          src="/criminalrecordcheck/images/bcid-symbol-rev.svg"
          width="64"
        />
        <div
          className="pointer navbar-brand nav-item nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          Criminal Record Check
        </div>
      </div>
    </nav>
  </header>
  <div
    className="page"
  >
    <div
      className="content col-md-8"
    >
      <h1>
        Payment Declined
      </h1>
      <span>
        Unfortunately, your payment transaction was declined. Please ensure you have the correct credit card information:
      </span>
      <ul
        className="bodyList"
      >
        <li>
          16 digit credit card number
        </li>
        <li>
          3 digit CVD number
        </li>
        <li>
          Non-expired date
        </li>
        <li>
          Availale funds to transfer
        </li>
      </ul>
      <p>
        <button
          className="notAButton"
          onClick={[Function]}
          type="button"
        >
          Click here to try again
        </button>
        . Otherwise, please refer to our website for submission options.
      </p>
      <div
        className="print"
      >
        <table
          className="white"
          id="print"
        >
          <thead>
            <tr>
              <th
                colSpan="2"
              >
                Application Information
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Service Number
              </td>
              <td>
                987
              </td>
            </tr>
            <tr>
              <td>
                First Name
              </td>
              <td>
                Robert
              </td>
            </tr>
            <tr>
              <td>
                Last Name
              </td>
              <td>
                Ross
              </td>
            </tr>
            <tr>
              <td>
                Organization
              </td>
              <td>
                Public Broadcast Network
              </td>
            </tr>
            <tr>
              <td>
                Date/Time
              </td>
              <td>
                3/2/2020 8:43:52 AM
              </td>
            </tr>
            <tr>
              <td>
                Transaction ID
              </td>
              <td>
                2946
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="buttons pt-4"
        style={
          Object {
            "justifyContent": "flex-start",
          }
        }
      >
        <button
          className="btn ecrc_go_btn btn"
          onClick={[Function]}
          type="submit"
        >
          Print
          <div
            className="loader-hide"
          >
            <div
              className="btn-loader"
            />
          </div>
        </button>
        <button
          className="btn ecrc_go_btn ml-5 mr-0 btn"
          onClick={[Function]}
          type="submit"
        >
          Download
          <div
            className="loader-hide"
          >
            <div
              className="btn-loader"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
  <footer
    className="footer"
  >
    <nav
      className="navbar navbar-expand-sm navbar-dark justify-content-end"
    >
      <button
        className="navbar-toggler"
        data-target="#footerBar"
        data-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse flex-grow-0"
        id="footerBar"
      >
        <ul
          className="navbar-nav text-right"
        >
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca"
              rel="noopener noreferrer"
              target="_blank"
            >
              BC Government
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
              rel="noopener noreferrer"
              target="_blank"
            >
              Disclaimer
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Privacy
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/accessibility"
              rel="noopener noreferrer"
              target="_blank"
            >
              Accessibility
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/copyright"
              rel="noopener noreferrer"
              target="_blank"
            >
              Copyright
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </footer>
</main>
`;

exports[`Success Page Component Matches the SuccessfulPayment snapshot 1`] = `
<main>
  <header>
    <nav
      className="navbar navbar-expand-lg navbar-dark"
    >
      <div
        className="container-fluid navbar-brand pointer"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <img
          alt="B.C. Government Logo"
          className="img-fluid d-none d-md-block"
          height="44"
          src="/criminalrecordcheck/images/bcid-logo-rev-en.svg"
          width="181"
        />
        <img
          alt="B.C. Government Logo"
          className="img-fluid d-md-none"
          height="44"
          src="/criminalrecordcheck/images/bcid-symbol-rev.svg"
          width="64"
        />
        <div
          className="pointer navbar-brand nav-item nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          Criminal Record Check
        </div>
      </div>
    </nav>
  </header>
  <div
    className="page"
  >
    <div
      className="content col-md-8"
    >
      <h1>
        Payment Approved
      </h1>
      <p>
        Thank you for submitting your application to the Criminal Records Review Program.
      </p>
      <p>
        Your application will be reviewed shortly. Once complete, the results will be provided directly to the requesting organization. We will contact you if further information is required.
      </p>
      <div
        className="print"
      >
        <table
          className="white"
          id="print"
        >
          <thead>
            <tr>
              <th
                colSpan="2"
              >
                Application Information
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Service Number
              </td>
              <td>
                987
              </td>
            </tr>
            <tr>
              <td>
                First Name
              </td>
              <td>
                Robert
              </td>
            </tr>
            <tr>
              <td>
                Last Name
              </td>
              <td>
                Ross
              </td>
            </tr>
            <tr>
              <td>
                Organization
              </td>
              <td>
                Public Broadcast Network
              </td>
            </tr>
            <tr>
              <td>
                Amount
              </td>
              <td>
                28.00
              </td>
            </tr>
            <tr>
              <td>
                Date/Time
              </td>
              <td>
                3/4/2020 1:01:36 PM
              </td>
            </tr>
            <tr>
              <td>
                Transaction ID
              </td>
              <td>
                2991
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="buttons pt-4"
        style={
          Object {
            "justifyContent": "flex-start",
          }
        }
      >
        <button
          className="btn ecrc_go_btn btn"
          onClick={[Function]}
          type="submit"
        >
          Print
          <div
            className="loader-hide"
          >
            <div
              className="btn-loader"
            />
          </div>
        </button>
        <button
          className="btn ecrc_go_btn ml-5 mr-0 btn"
          onClick={[Function]}
          type="submit"
        >
          Download
          <div
            className="loader-hide"
          >
            <div
              className="btn-loader"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
  <footer
    className="footer"
  >
    <nav
      className="navbar navbar-expand-sm navbar-dark justify-content-end"
    >
      <button
        className="navbar-toggler"
        data-target="#footerBar"
        data-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse flex-grow-0"
        id="footerBar"
      >
        <ul
          className="navbar-nav text-right"
        >
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca"
              rel="noopener noreferrer"
              target="_blank"
            >
              BC Government
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
              rel="noopener noreferrer"
              target="_blank"
            >
              Disclaimer
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Privacy
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/accessibility"
              rel="noopener noreferrer"
              target="_blank"
            >
              Accessibility
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/copyright"
              rel="noopener noreferrer"
              target="_blank"
            >
              Copyright
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </footer>
</main>
`;

exports[`Success Page Component Matches the Volunteer snapshot 1`] = `
<main>
  <header>
    <nav
      className="navbar navbar-expand-lg navbar-dark"
    >
      <div
        className="container-fluid navbar-brand pointer"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <img
          alt="B.C. Government Logo"
          className="img-fluid d-none d-md-block"
          height="44"
          src="/criminalrecordcheck/images/bcid-logo-rev-en.svg"
          width="181"
        />
        <img
          alt="B.C. Government Logo"
          className="img-fluid d-md-none"
          height="44"
          src="/criminalrecordcheck/images/bcid-symbol-rev.svg"
          width="64"
        />
        <div
          className="pointer navbar-brand nav-item nav-link"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          Criminal Record Check
        </div>
      </div>
    </nav>
  </header>
  <div
    className="page"
  >
    <div
      className="content col-md-8"
    >
      <h1>
        Application Submitted
      </h1>
      <p>
        Thank you for submitting your application to the Criminal Records Review Program.
      </p>
      <p>
        Your application will be reviewed shortly. Once complete, the results will be provided directly to the requesting organization. We will contact you if further information is required.
      </p>
      <div
        className="print"
      >
        <table
          className="white"
          id="print"
        >
          <thead>
            <tr>
              <th
                colSpan="2"
              >
                Application Information
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Service Number
              </td>
              <td>
                987
              </td>
            </tr>
            <tr>
              <td>
                First Name
              </td>
              <td>
                Robert
              </td>
            </tr>
            <tr>
              <td>
                Last Name
              </td>
              <td>
                Ross
              </td>
            </tr>
            <tr>
              <td>
                Organization
              </td>
              <td>
                Public Broadcast Network
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="buttons pt-4"
        style={
          Object {
            "justifyContent": "flex-start",
          }
        }
      >
        <button
          className="btn ecrc_go_btn btn"
          onClick={[Function]}
          type="submit"
        >
          Print
          <div
            className="loader-hide"
          >
            <div
              className="btn-loader"
            />
          </div>
        </button>
        <button
          className="btn ecrc_go_btn ml-5 mr-0 btn"
          onClick={[Function]}
          type="submit"
        >
          Download
          <div
            className="loader-hide"
          >
            <div
              className="btn-loader"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
  <footer
    className="footer"
  >
    <nav
      className="navbar navbar-expand-sm navbar-dark justify-content-end"
    >
      <button
        className="navbar-toggler"
        data-target="#footerBar"
        data-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse flex-grow-0"
        id="footerBar"
      >
        <ul
          className="navbar-nav text-right"
        >
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca"
              rel="noopener noreferrer"
              target="_blank"
            >
              BC Government
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
              rel="noopener noreferrer"
              target="_blank"
            >
              Disclaimer
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Privacy
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/accessibility"
              rel="noopener noreferrer"
              target="_blank"
            >
              Accessibility
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/copyright"
              rel="noopener noreferrer"
              target="_blank"
            >
              Copyright
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </footer>
</main>
`;
